fixed overflow hidden

--- a/css/my.css
+++ b/css/my.css
@@ -1,7 +1,3 @@
-body {
-	overflow: hidden;
-}
-
 /* Preloader */
 #preloader {
 	position: fixed;
